--- a/master.css
+++ b/master.css
@@ -9,6 +9,7 @@ header {
   background-color: lightblue;
   position: fixed;
   top: 0;
+  height: 60px;
   width: 100%;
 }
 
@@ -82,9 +83,32 @@ header {
 .carousal-container::before {
   content: "";
   display: block;
-  padding-top: 38px;
-  margin-top: 100px;
+  /* padding-top: 24px; */
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
+
+.carousal-container {
+
+}
+
+.carousal-img {
+  height: 280px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 24px;
+  padding-bottom: 24px;
+
+}
+
+.carousal-container div {
+  background-color: blue;
+  height: 100%;
+  width: 100%;
+}
+
+
 
 
 /*footer*/
