--- a/product.css
+++ b/product.css
@@ -26,7 +26,6 @@
 
 .aside-pic {
   display: inline-block;
-  background-color: grey;
   height: 400px;
   width: 28%;
   margin-left: 24px;
@@ -38,9 +37,10 @@
 
 .main-product {
   display: inline-block;
+  background-color: lightblue;
   height: 400px;
   width: 60%;
-  background-color: grey;
+
 }
 
 .separate-div2 {
@@ -69,6 +69,9 @@
   padding: 0;
   margin-bottom: 24px;
   /* possible overflow */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .prod-box {
@@ -77,6 +80,7 @@
 
 .prod-preview {
   display: inline-block;
+  vertical-align: middle;
   width: 500px;
   height: 160px;
   background-color: white;
@@ -84,9 +88,14 @@
 .preview-img {
   display: inline-block;
   cursor: pointer;
-  height: 90px;
-  width: 70px;
-  margin: 0 10px;
+  vertical-align: middle;
+  /* height: 90px; */
+  width: 18%;
+  margin: 3% 4px;
+}
+
+.preview-img:hover {
+  border: 2px solid lightblue;
 }
 
 /*can't give margin-top to button without
