--- a/confirmation.css
+++ b/confirmation.css
@@ -1,7 +1,7 @@
 .separate-div {
   width: 100%;
   height: 68px;
-  background-color: black;
+  /* background-color: black; */
 }
 
 .separate-div::before {
@@ -13,17 +13,69 @@
 
 #confirmation-main {
   margin: 28px auto;
-  background-color: grey;
+  background-color: white;
   width: 70%;
   height: 500px;
 }
 
 #confirmation-animation {
-  background-color: lightgreen;
+  background-color: white;
   margin: 0 auto;
   width: 180px;
   height: 180px;
 }
+/*animatio try out*/
+.animation {
+  display: block;
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  position: relative;
+  box-sizing: border-box;
+  margin: 0 auto;
+  background-color: lightblue;
+  animation-name: check;
+  animation-duration: 1.5s;
+  animation-direction: alternate;
+}
+
+@keyframes check {
+  from {
+    width: 169px;
+    height: 169px;
+  }
+  to {
+    width: 130px;
+    height: 130px;
+  }
+}
+
+.animation::before {
+  content: '';
+  display: block;
+  width: 50px;
+  height: 8px;
+  background-color: white;
+  border-bottom: 8px;
+  position: absolute;
+  transform: rotate(135deg);
+  right: 30px;
+  bottom: 70px;
+}
+
+.animation::after {
+  content: '';
+  display: block;
+  width: 25px;
+  height: 8px;
+  background-color: white;
+  border-bottom: 8px;
+  position: absolute;
+  transform: rotate(45deg);
+  right: 63px;
+  bottom: 61px;
+}
+
 
 .confirmation-h2 {
   text-align: center;
@@ -36,17 +88,17 @@
   text-align: center;
   margin: 0;
   padding: 0;
-  font-size: 18px;
+  font-size: 22px;
 }
 
 #confirmation-main a {
   display: block;
   text-align: center;
-  margin-top: 68px;
-  font-size: 14px;
-  color: lightblue;
+  margin-top: 30px;
+  font-size: 20px;
+  color: black;
 }
 
 #confirmation-main a:visited {
-  color: #dddddd;
+  color: lightblue;
 }
