--- a/product.css
+++ b/product.css
@@ -166,6 +166,8 @@ affecting preview pics*/
     /* height: 90px; */
     width: 18%;
     margin-top: 3%;
+    margin-left: 2px;
+    margin-right: 2px;
   }
 }
 
