--- a/checkout.css
+++ b/checkout.css
@@ -151,10 +151,47 @@
 }
 
 /* CARD LIST */
-@media (max-width: 566px) {
+@media (max-width: 570px) {
+
+  #main-checkout {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+    /* background-color: grey; */
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    margin: 0;
+    /* height: 550px; */
+
+  }
+
+  #checkout-list {
+    grid-row: 1 / 1;
+    grid-column: 1 / 2;
+    background-color: lightblue;
+    /* handle div overflow */
+    overflow: auto;
+    height: auto;
+    margin-bottom: 4px;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  #checkout-total-div {
+    grid-column: 1 / 2;
+    grid-row: 2 / 2;
+    padding-bottom: 12px;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%
+  }
+
   .check-prod-list {
     /* handle div overflow */
     overflow-y: auto;
+    height: auto
   }
 
   #checkout-total-h2, #buy-now {
