--- a/master.css
+++ b/master.css
@@ -279,6 +279,11 @@ h5 {
     margin-left: 2px;
     margin-right: 2px;
   }
+
+  .div-header-shop {
+    padding-right: 12px;
+  }
+
   .shopping-cart {
     height: 25px;
     margin-right: 10px;
@@ -305,5 +310,20 @@ h5 {
   .footer-p {
   font-size: 12px;
   }
+
+}
+
+@media (max-width: 376px) {
+
+  .div-header a {
+    font-size: 13px;
+    margin-left: 1px;
+    margin-right: 1px;
+  }
+
+  .clothes-div {
+  width: 150px;
+  }
+
 
 }
